[gd_scene load_steps=2 format=3 uid="uid://vg5mbunb1gw7"]

[ext_resource type="Script" path="res://ControllerInfo.gd" id="1"]

[node name="ControllerInfo" type="Node2D"]
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
color = Color(0.2, 0.364706, 0.180392, 0.262745)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TriggerInput" type="HSlider" parent="Container"]
offset_right = 500.0
offset_bottom = 16.0
rect_min_size = Vector2(500, 0)

[node name="GripInput" type="HSlider" parent="Container"]
offset_top = 20.0
offset_right = 500.0
offset_bottom = 36.0
rect_min_size = Vector2(500, 0)

[node name="Joysticks" type="HBoxContainer" parent="Container"]
offset_top = 40.0
offset_right = 500.0
offset_bottom = 90.0

[node name="Primary" type="Control" parent="Container/Joysticks"]
offset_right = 50.0
offset_bottom = 50.0
rect_min_size = Vector2(50, 50)

[node name="Background" type="ColorRect" parent="Container/Joysticks/Primary"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puck" type="ColorRect" parent="Container/Joysticks/Primary/Background"]
color = Color(0, 0, 0, 1)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Secondary" type="Control" parent="Container/Joysticks"]
offset_left = 54.0
offset_right = 104.0
offset_bottom = 50.0
rect_min_size = Vector2(50, 50)

[node name="Background" type="ColorRect" parent="Container/Joysticks/Secondary"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puck" type="ColorRect" parent="Container/Joysticks/Secondary/Background"]
color = Color(0, 0, 0, 1)

[node name="AXButton" type="HBoxContainer" parent="Container"]
offset_top = 94.0
offset_right = 500.0
offset_bottom = 125.0

[node name="Value" type="CheckBox" parent="Container/AXButton"]
offset_right = 24.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="Container/AXButton"]
offset_left = 28.0
offset_top = 2.0
offset_right = 111.0
offset_bottom = 28.0
text = "A/X button"

[node name="BYButton" type="HBoxContainer" parent="Container"]
offset_top = 129.0
offset_right = 500.0
offset_bottom = 160.0

[node name="Value" type="CheckBox" parent="Container/BYButton"]
offset_right = 24.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="Container/BYButton"]
offset_left = 28.0
offset_top = 2.0
offset_right = 110.0
offset_bottom = 28.0
text = "B/Y button"

[node name="MenuButton" type="HBoxContainer" parent="Container"]
offset_top = 164.0
offset_right = 500.0
offset_bottom = 195.0

[node name="Value" type="CheckBox" parent="Container/MenuButton"]
offset_right = 24.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="Container/MenuButton"]
offset_left = 28.0
offset_top = 2.0
offset_right = 128.0
offset_bottom = 28.0
text = "Menu button"

[node name="SelectButton" type="HBoxContainer" parent="Container"]
offset_top = 199.0
offset_right = 500.0
offset_bottom = 230.0

[node name="Value" type="CheckBox" parent="Container/SelectButton"]
offset_right = 24.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="Container/SelectButton"]
offset_left = 28.0
offset_top = 2.0
offset_right = 129.0
offset_bottom = 28.0
text = "Select button"

[node name="TriggerButton" type="HBoxContainer" parent="Container"]
offset_top = 234.0
offset_right = 500.0
offset_bottom = 265.0

[node name="Value" type="CheckBox" parent="Container/TriggerButton"]
offset_right = 24.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="Container/TriggerButton"]
offset_left = 28.0
offset_top = 2.0
offset_right = 82.0
offset_bottom = 28.0
text = "Trigger"

[node name="SideButton" type="HBoxContainer" parent="Container"]
offset_top = 269.0
offset_right = 500.0
offset_bottom = 300.0

[node name="Value" type="CheckBox" parent="Container/SideButton"]
offset_right = 24.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="Container/SideButton"]
offset_left = 28.0
offset_top = 2.0
offset_right = 155.0
offset_bottom = 28.0
text = "Side button/Grip"
